fixed gap issues

--- a/src/css/card.css
+++ b/src/css/card.css
@@ -11,7 +11,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 12px;
 }
 
 .flip-card:hover {
