--- a/src/css/matchgame.css
+++ b/src/css/matchgame.css
@@ -24,17 +24,13 @@
 }
 
 .game_container {
-  width: 100%;
-  height: 88%;
+  width: 98%;
+  height: 79%;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-around;
+  align-items: flex-start;
   position: relative;
-}
-.game_container.center {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
+  gap: 20px;
 }
